samples/_failures_safe/1761706398_e5d792_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8613f7fc.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_8613f7fc.c:149:13: error: expected expression at end of input
  149 |             buffer[
      |             ^~~~~~
./samples/SAFE/__tmp_8613f7fc.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8613f7fc.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8613f7fc.c:149:13: error: expected declaration or statement at end of input
